Akeeba Data Compliance 3.1.1
================================================================================
~ Changed the fake email domain used when pseudonymising users
# [HIGH] Joomla 4.2 made it extra hard to restart the session (gh-40)
# [HIGH] The Profile Deletions page threw an exception (gh-39)
# [MEDIUM] Plugins not enabled on clean installation

Akeeba Data Compliance 3.1.0
================================================================================
# [LOW] Wrong grammatical case (nominative instead of genitive) in months in some languages e.g. Greek

Akeeba Data Compliance 3.1.0
================================================================================
+ Minimum Joomla 4.2, PHP 7.4
- Removed PHP version warnings

Akeeba Data Compliance 3.0.5
================================================================================
# [LOW] PHP 8.1 deprecated notice when checking if FOF is still installed

Akeeba Data Compliance 3.0.4
================================================================================
+ Add Show Inline Help support in component options for Joomla 4.1

Akeeba Data Compliance 3.0.3
================================================================================
~ Updated ATS plugin for ATS version 5 and later
# [LOW] PHP warning when using legacy menu items with view=Options (with an uppercase letter) stored in the database

Akeeba Data Compliance 3.0.2
================================================================================
# [HIGH] Cannot install on Joomla! 4.1
# [HIGH] Unhandled exception when you have turned off email sending in your site's Global Configuration
# [LOW] PHP 8.1 Notice when checking whether the user has agreed to the site's terms

Akeeba Data Compliance 3.0.1
================================================================================
# [LOW] Bootstrap 5.1.2 included in Joomla 4.0.4 broke the CSS for Control Panel icons