@@ -4,6 +4,7 @@ Akeeba Data Compliance 3.1.1
 # [HIGH] Joomla 4.2 made it extra hard to restart the session (gh-40)
 # [HIGH] The Profile Deletions page threw an exception (gh-39)
 # [MEDIUM] Plugins not enabled on clean installation
+# [LOW] User plugin may not work on some installations which pass form data as an array (gh-42)
 
 Akeeba Data Compliance 3.1.0
 ================================================================================
